--- a/TestExecutive.resx
+++ b/TestExecutive.resx
@@ -140,4 +140,7 @@
         AElFTkSuQmCC
 </value>
   </data>
+  <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>82, 11</value>
+  </metadata>
 </root>
