--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,7 +121,7 @@
   <data name="Amphenol" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Amphenol.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Stop" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Stop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="EmergencyStop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\EmergencyStop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
